--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       </div>
 
       <div class="order-6 lg:order-3 mt-3 lg:mt-0 ">
-        <button class="cursor-pointer duration-300 lg:text-[24px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)] xl:w-[490px] lg:w-[390px] w-[88%] flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-4 py-3 rounded-full ">
+        <a href="./guest-survey-page-1.html" class="cursor-pointer duration-300 lg:text-[24px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)] xl:w-[490px] lg:w-[390px] w-[88%] flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-4 py-3 rounded-full ">
           Apply Now
-        </button>
+        </a>
         <p class="lg:text-[20px] text-[16px] text-[#7D7A74] mt-5 text-center lg:-ml-12">
           Apply with zero fees
         </p>
@@ -142,9 +142,9 @@
         <p class="lg:text-[20px] text-[16px] text-[#E8DDD0]  ">
           Apply with zero fees
         </p>
-        <button class="cursor-pointer duration-300 lg:text-[20px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)]  flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-12 py-3 rounded-full ">
+        <a href="./guest-survey-page-1.html" class="cursor-pointer duration-300 lg:text-[20px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)]  flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-12 py-3 rounded-full ">
           Apply Now
-        </button>
+        </a>
        
       </div>
 
