--- a/guest-survey-page-1.html
+++ b/guest-survey-page-1.html
@@ -16,7 +16,8 @@
 <body class="font-[lexend]">
 
  <section class="gradient-bg pt-8  lg:px-[64px] lg:pb-[48px] pb-[24px] p-6 ">
-<img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] ">
+<a href="./"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
+
 
       <h2 class="text-[#5B7B5A] lg:text-[48px] text-[24px] font-[500] lg:mb-10 mb-6 lg:mt-6 mt-12 text-center">Let us find a <br class="lg:hidden block"> great home for you</h2>
 
@@ -249,7 +250,7 @@ Study Situation?</label>
         
         </div>
          <input id="relocateField" type="text" class="hidden w-full mt-6 p-3 text-[20px] lg:placeholder:text-[20px]
-         placeholder:text-[16px] font-[400] text-center
+         placeholder:text-[16px] font-[400] text-center lg:pb-2 pb-4 whitespace-normal placeholder:whitespace-normal
                border-b border-[#675F57] focus:outline-0 focus:border-[#795634] text-[#4A4A4A] placeholder-[rgba(103,95,87,0.30)]"
                placeholder="(Optional) If you're interested in relocating, please describe your ideal location">
 
