--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  hero-bg 
  ">
  
-<a href="./"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
+<a href="./" class="inline-flex"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
  <div class=" lg:py-16 lg:pt-12 pt-8 pb-16 ">
   <div class=" lg:px-6 px-4 grid lg:grid-cols-2 gap-12 items-start">
     
