--- a/guest-survey-page-1.html
+++ b/guest-survey-page-1.html
@@ -181,15 +181,21 @@ Study Situation?</label>
            rounded-[10px] shadow-lg z-50"
   >
     <div data-option class="px-4 py-2 text-[#675F57] hover:bg-[#C9D5BD] cursor-pointer">
-      16-20
+      18-24
     </div>
 
     <div data-option class="px-4 py-2 text-[#675F57] hover:bg-[#C9D5BD] cursor-pointer">
-      20-30
+      25-35
     </div>
 
     <div data-option class="px-4 py-2 text-[#675F57] hover:bg-[#C9D5BD] cursor-pointer">
-      30-40
+      36-45
+    </div>
+     <div data-option class="px-4 py-2 text-[#675F57] hover:bg-[#C9D5BD] cursor-pointer">
+      46-55
+    </div>
+     <div data-option class="px-4 py-2 text-[#675F57] hover:bg-[#C9D5BD] cursor-pointer">
+      55+
     </div>
   </div>
 
@@ -223,7 +229,7 @@ Study Situation?</label>
     </div>
 
     <div data-option class="px-4 py-2 text-[#675F57] hover:bg-[#C9D5BD] cursor-pointer">
-      Transgender
+      Other
     </div>
   </div>
 
