--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
  ">
  
 <a href="./" class="inline-flex"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
- <div class=" lg:py-16 lg:pt-12 pt-8 pb-16 ">
+ <div class=" lg:py-16  lg:pt-4 pt-4 pb-16 ">
   <div class=" lg:px-6 px-4 grid lg:grid-cols-2 gap-12 items-start">
     
     <div class="flex flex-col">
       
-      <h1 class="lg:text-[72px] text-[40px] font-[700] lg:tracking-[1px] text-[#5B7B5A] lg:leading-[64px] leading-[48px]
+      <h1 class="lg:text-[65px] text-[40px] font-[700] lg:tracking-[1px] text-[#5B7B5A] lg:leading-[64px] leading-[48px]
                  lg:mb-2 lg:mt-4 order-1 lg:order-1 lg:text-start text-center ">
         Live Rent-Free
       </h1>
 
-      <h2 class="lg:text-[56px] text-[20px] font-[500] text-[#2D2D2D] lg:leading-[64px] lg:tracking-[1px]
-                 lg:mb-12 mb-6 lg:mt-4 order-2 lg:order-2 lg:text-start text-center">
+      <h2 class="lg:text-[52px] text-[20px] font-[500] text-[#2D2D2D] lg:leading-[64px] lg:tracking-[1px]
+                 lg:mb-8 mb-6 lg:mt-4 order-2 lg:order-2 lg:text-start text-center">
         While Helping a Great Family
       </h2>
 
@@ -41,16 +41,16 @@
       </div>
 
       <div class="order-6 lg:order-3 mt-3 lg:mt-0 ">
-        <a href="./guest-survey-page-1.html" class="cursor-pointer duration-300 lg:text-[24px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)] xl:w-[490px] lg:w-[390px] w-[88%] flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-4 py-3 rounded-full ">
+        <a href="./guest-survey-page-1.html" class="cursor-pointer duration-300 lg:text-[20px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)] xl:w-[490px] lg:w-[390px] w-[88%] flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-4 py-[10px] rounded-full ">
           Apply Now
         </a>
-        <p class="lg:text-[20px] text-[16px] text-[#7D7A74] mt-5 text-center lg:-ml-12 xl:text-start xl:ml-32">
+        <p class="lg:text-[20px] text-[16px] text-[#7D7A74] mt-4 text-center lg:-ml-12 xl:text-start xl:ml-32">
           Apply with zero fees
         </p>
       </div>
 
       <p class="text-[#BE5103] font-[500] lg:text-[24px] text-[20px]
-                lg:mt-10  order-4 lg:order-4 lg:text-start text-center ">
+                lg:mt-6  order-4 lg:order-4 lg:text-start text-center ">
         We match responsible individuals with families who need help at home
       </p>
 
