hireflix integration implemented

--- a/guest-pricing-page.html
+++ b/guest-pricing-page.html
@@ -15,6 +15,7 @@
 <body class="font-[lexend]">
 
  <section class="gradient-bg pt-8  lg:px-[64px] lg:pb-[48px] pb-[24px] p-6 ">
+  <div class="max-w-[1440px] mx-auto">
 <a href="./" class="inline-flex"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
 
 
@@ -172,6 +173,7 @@
 
 
     </div>
+  </div>
   </div>
 </section>
 
