--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <section class="relative hero-section w-full  mx-auto  lg:px-[64px] lg:pb-[48px] pb-[24px] p-6
  hero-bg 
  ">
- 
+ <div class="max-w-[1440px] mx-auto">
 <a href="./" class="inline-flex"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
  <div class=" lg:py-16  lg:pt-4 pt-4 pb-16 ">
   <div class=" lg:px-6 px-4 grid lg:grid-cols-2 gap-12 items-start">
@@ -71,12 +71,13 @@
 
   </div>
 </div>
-
+</div>
 
 
 </section>
 
 <section class="w-full bg-[#3E4A3D] pb-[48px] pt-[64px] lg:px-[64px] px-[24px] ">
+  <div class="max-w-[1440px] mx-auto">
    <div class="flex lg:flex-row items-center justify-between flex-col lg:gap-16 gap-8">
   <div class="flex flex-col justify-center">
       <h2 class="xl:text-[72px] lg:text-[45px] text-[28px]  lg:leading-[72px] leading-[42px] font-[700] lg:text-left text-center">
@@ -147,10 +148,12 @@
         </a>
        
       </div>
-
+</div>
 </section>
 
 <section class="w-full  py-[48px] lg:px-[64px] px-[24px] bg-[linear-gradient(180deg,#F4EFE8_0%,#FAF8F5_100%)]">
+ <div class="max-w-[1440px] mx-auto">
+ 
   <div class=" mx-auto text-center">
     <h2 class="lg:text-[48px] text-[24px]  font-[500] text-[#5B7B5A] lg:mb-14 mb-6">
       Real Stories From Our Community
@@ -191,6 +194,7 @@
      
 
     </div>
+  </div>
   </div>
 </section>
 
