--- a/guest-survey-page-7.html
+++ b/guest-survey-page-7.html
@@ -11,6 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
 
 <title>Guest Survey Page 7</title>
+<!-- Contentsquare (Hotjar) Tracking -->
+<script src="https://t.contentsquare.net/uxa/ce07a67e879d5.js"></script>
 </head>
 <body class="font-[lexend]">
 
