--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
  
 
 <title>Nest Helpers - Landing Page</title>
+<!-- Contentsquare (Hotjar) Tracking -->
+<script src="https://t.contentsquare.net/uxa/ce07a67e879d5.js"></script>
 </head>
 <body class="font-[lexend]">
 
