--- a/send.html
+++ b/send.html
@@ -12,6 +12,8 @@
  
 
 <title>Guest Pricing Page: Send</title>
+<!-- Contentsquare (Hotjar) Tracking -->
+<script src="https://t.contentsquare.net/uxa/ce07a67e879d5.js"></script>
 </head>
 <body class="font-[lexend] gradient-bg ">
 
