hero section updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <section class="relative hero-section w-full  mx-auto  lg:px-[44px] lg:pb-[48px] pb-[24px] p-6
  hero-bg 
  ">
-<img src="./assets/images/blob-1.svg" alt="blob" class="absolute lg:top-[19%] top-[55%] lg:w-[380px] w-[150px] lg:left-0 -left-6">
+<img src="./assets/images/blob-1.svg" alt="blob" class="absolute lg:top-[19%] top-[55%] lg:w-[380px] xl:w-[450px] xl:top-[17%] w-[150px] lg:left-0 -left-6">
  <div class="relative max-w-[1440px] mx-auto">
 <img src="./assets/images/blob-2.svg" alt="blob" class="absolute lg:-bottom-12 -bottom-6 lg:w-[418px] w-[220px]  lg:left-[20%] left-[40%]">
 
@@ -46,7 +46,7 @@
       </div>
 
       <div class="order-6 lg:order-3 lg:mt-6 -mt-4 ">
-        <a href="./guest-survey-page-1.html" class="cursor-pointer duration-300 lg:text-[20px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)] xl:w-[490px] lg:w-[390px] w-[88%] flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-4 py-[14px] rounded-full ">
+        <a href="./guest-survey-page-1.html" class="cursor-pointer duration-300 lg:text-[24px] text-[16px] font-[500] shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10),_0_4px_6px_-4px_rgba(0,0,0,0.10)] xl:w-[490px] lg:w-[390px] w-[88%] flex items-center justify-center mx-auto lg:mx-0 lg:mt-0 mt-10 bg-[#BE5103] hover:bg-[#a24c00] text-white  px-4 py-[14px] rounded-full ">
           Apply Now
         </a>
         <p class="lg:text-[20px] text-[16px] text-[#7D7A74] mt-4 lg:mt-6 text-center lg:-ml-12 xl:text-start xl:ml-32">
@@ -56,7 +56,7 @@
 
       <p class="text-[#BE5103] font-[500] lg:text-[24px] text-[20px]
                 lg:mt-12  order-4 lg:order-4 lg:text-start text-center ">
-        We match responsible individuals with families who need help at home
+        We match responsible individuals <br class="xl:block hidden"> with families who need help at home
       </p>
 
       <p class="text-[#675F57] lg:text-[24px] text-[16px] font-[300]  xl:w-[927px] lg:w-[800px] w-full
