helpers-offers page updated

--- a/guest-pricing-page.html
+++ b/guest-pricing-page.html
@@ -18,11 +18,22 @@
 
  <section class="gradient-bg pt-8  lg:px-[64px] lg:pb-[48px] pb-[24px] p-6 ">
   <div class="max-w-[1440px] mx-auto">
-<a href="./" class="inline-flex"><img src="./assets/images/logo.png" alt="logo" class="lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
+
+    <div class="grid lg:grid-cols-[320px_1fr] lg:gap-16 gap-6">
+<a href="./" class="inline-flex"><img src="./assets/images/logo.png" alt="logo" class="mt-4 lg:w-[124px] lg:h-[48px] w-[82px] h-[32px] "></a>
+ 
+<div class="space-y-2">
+<p class="lg:text-[36px] text-[20px]  font-[400] text-[#7D7A74] mt-2 ">
+    Save  <span class="text-[#BE5103] font-[500]">Over $20,000/year</span>  In Rent 
+  </p>
+<span class="text-[20px] font-[300]">*There is a one time $199 placement fee once you agree to housing arrangement</span>
+
+  </div>
+</div>
 
 
 
-  <div class=" mx-auto grid lg:grid-cols-[300px_1fr] gap-20 mt-12 items-center">
+  <div class=" mx-auto grid lg:grid-cols-[300px_1fr] gap-20 mt-12">
 
     <div class="lg:flex hidden flex-col gap-10">
 
@@ -63,18 +74,12 @@
 
     <div>
  <div class="w-full lg:pb-0 pb-10  ">
+<span class="text-[20px] font-[400] text-center">Choose your enrollment plan to get started</span>
 
-  <!-- Heading -->
-  <h2 class="lg:text-[48px] text-[24px] font-[500] text-[#2D2D2D]">
-    Let’s Get You Started
-  </h2>
-
-  <p class="lg:text-[36px] text-[20px] mt-2 font-[400] text-[#7D7A74]">
-    Save <span class="text-[#BE5103] font-[500]">Over $20,000/year</span> In Rent
-  </p>
+  
 
   <!-- PREMIUM CARD -->
-  <div id="premiumCard" class="mt-10 bg-[#FFE9A6] border border-[#675F57] rounded-[16px] p-6 relative">
+  <div id="premiumCard" class="mt-6 bg-[#FFE9A6] border border-[#675F57] rounded-[16px] p-6 relative">
 
     <!-- Premium label + badge -->
     <div class="flex items-center lg:justify-start justify-between gap-8">
@@ -87,8 +92,8 @@
 
     <!-- Price -->
     <div class="mt-8 lg:border-b-0 border-b-2 border-[#675F57] lg:pb-0 pb-5">
-      <span class="lg:text-[40px] text-[36px] font-[600] text-[#2D2D2D]">$49</span>
-      <span class="text-[16px] text-[#2D2D2D] font-[400]">/year</span>
+      <span class="lg:text-[40px] text-[36px] font-[600] text-[#2D2D2D]">$7.99</span>
+      <span class="text-[16px] text-[#2D2D2D] font-[400]"> enrollment</span>
     </div>
 
     <!-- Features -->
@@ -98,23 +103,63 @@
 <path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
 </svg>
 
+        <span>Select from the best housing opportunities</span>
+      </li>
+       <li class="flex gap-4">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
+</svg>
+
+        <span>Create a profile showcasing your candidacy including a video <br class="lg:block hidden"> interview with our summary notes</span>
+      </li>
+
+       <li class="flex gap-4">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
+</svg>
+
+        <span>Review profiles and video interviews of homeowners</span>
+      </li>
+
+   <li class="flex gap-4">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
+</svg>
+
+        <span>ID verification status on your profile </span>
+      </li>
+         <li class="flex gap-4">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
+</svg>
+
         <span>Appear higher in homeowner search results</span>
       </li>
-       <li class="flex gap-4">
+
+         <li class="flex gap-4">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
 </svg>
 
-        <span>Review and apply for available households opportunities</span>
+        <span>Search, review and apply for available housing opportunities</span>
       </li>
 
-       <li class="flex gap-4">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
-</svg>
 
-        <span>Complete ID verification and background checks</span>
-      </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
       <button id="premiumBtnMobile" class="lg:hidden w-full mt-4 cursor-pointer bg-[#BE5103] hover:bg-[#9b5124] 
         text-white text-[16px] font-[400] px-6 py-3 rounded-full shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10)] transition">
       Select Plan
@@ -147,7 +192,15 @@
 <path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
 </svg>
 
-        <span>Be notified and apply when any matching <br class="lg:block hidden"> households are interested in meeting you</span>
+        <span>No ID Verification or Video Interview for   homeowners to review</span>
+      </li>
+
+        <li class="flex gap-4 ">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M9.54995 15.8799L18.3519 7.07893C18.4493 6.9816 18.5639 6.9296 18.6959 6.92293C18.8279 6.91626 18.949 6.96826 19.059 7.07893C19.169 7.1896 19.2243 7.3086 19.225 7.43593C19.2256 7.56326 19.1706 7.68193 19.0599 7.79193L10.116 16.7419C9.95395 16.9039 9.76528 16.9849 9.54995 16.9849C9.33462 16.9849 9.14595 16.9039 8.98395 16.7419L4.93395 12.6919C4.83662 12.5946 4.78595 12.4789 4.78195 12.3449C4.77795 12.2109 4.83062 12.0889 4.93995 11.9789C5.04928 11.8689 5.16828 11.8139 5.29695 11.8139C5.42562 11.8139 5.54462 11.8689 5.65395 11.9789L9.54995 15.8799Z" fill="#2D2D2D"/>
+</svg>
+
+        <span>Get  notified and apply if  households are interested in meeting you</span>
       </li>
  <button id="basicBtnMobile" class="lg:hidden w-full mt-4 cursor-pointer bg-[#BE5103] hover:bg-[#9b5124] 
         text-white text-[16px] font-[400] px-6 py-3 rounded-full shadow-[0_10px_15px_-3px_rgba(0,0,0,0.10)] transition">
@@ -167,9 +220,7 @@
   </div>
 
   <!-- Footer link -->
-  <div class="mt-16 text-center">
-    <a href="#" class="text-[#7D7A74] underline text-[20px] font-[400]">Have Questions? Let us know</a>
-  </div>
+  
 
 </div>
 
