--- a/send.html
+++ b/send.html
@@ -26,7 +26,9 @@
 </h2>
 
 <span class="lg:text-[24px] text-[16px] font-[400] text-[#2D2D2D]">Thank you for your submission!</span>
-
+<div class=" text-center ">
+    <a href="#" class="text-[#7D7A74] underline lg:text-[20px] text-[16px] font-[400]">Have Questions? Let us know</a>
+  </div>
 </div>
 
 
