--- a/send.html
+++ b/send.html
@@ -2,6 +2,14 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZY1KSD55X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-6ZY1KSD55X');
+  </script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -26,7 +34,13 @@
 
 <span class="lg:text-[24px] text-[16px] font-[400] text-[#2D2D2D]">Thank you for your submission!</span>
  <div class="mt-6 text-center">
-    <a href="#" class="text-[#7D7A74] underline lg:text-[20px] text-[16px] font-[400]">Have Questions? Let us know</a>
+  <a href="mailto:support@nesthelpers.com" 
+  class="text-[#7D7A74] underline lg:text-[20px] text-[16px] font-[400]">
+ Have Questions? Let us know
+</a>
+
+  
+  
   </div>
 </div>
 </section>
