airtable logic added

--- a/host-pricing-page.html
+++ b/host-pricing-page.html
@@ -36,9 +36,10 @@ src="https://www.facebook.com/tr?id=409710449219518&ev=PageView&noscript=1"
 <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
  
 
+<!-- Airtable config loaded from external file (not in git) -->
+<script src="./assets/js/airtable-config.js"></script>
 <script data-airtable-base-id="appy5HnUexfMq454A" 
-        data-airtable-table-name="NestHelpers" 
-        data-airtable-api-key="pat2LIh9zDMXus1zP.cdc6e1b6bb4e939b1f9d0ce5a6b1da5ecd9f2e55106bbc88cf2b2865b8c1062c"></script>
+        data-airtable-table-name="NestHelpers"></script>
 
 <title>Host Pricing pAGE</title>
 <script src="https://t.contentsquare.net/uxa/ce07a67e879d5.js"></script>
