nest helpers final changes completed

--- a/host-pricing-page.html
+++ b/host-pricing-page.html
@@ -56,12 +56,11 @@
     Upgrade your life & save <span class="text-[#BE5103] font-[500]">Over $30,000/year</span>
   </p>
 <span class="text-[20px] font-[300]">$99/month placement fee after you select and hire your live-in helper </span>
-<span class="text-[20px] font-[300] mt-6 block">Select your preferred enrollment plan to get started </span>
 
   </div>
 </div>
 
-  <div class=" mx-auto grid lg:grid-cols-[320px_1fr] gap-16 mt-12 ">
+  <div class=" mx-auto grid lg:grid-cols-[320px_1fr] gap-16 mt-12  ">
 
     <div class="lg:flex hidden flex-col gap-10">
       <div class="flex flex-col items-start  gap-3 px-6 py-[30px] rounded-[14px] border-[2px] border-[var(--Color-Green,#5B7B5A)]
@@ -101,21 +100,22 @@
     Let’s Get You Started
   </h2>
   -->
+<span class="text-[20px] lg:text-[22px] font-[300] lg:mb-2 mb-6  block">Select your preferred enrollment plan to get started </span>
 
 
-<ul class="space-y-2 text-[#675F57] text-[16px] lg:mt-0 -mt-4">
+<ul class="space-y-2 text-[#675F57] text-[16px] lg:text-[14px] lg:mt-0 -mt-4">
   <li class="flex items-start gap-8">
-    <span class="mt-2 block h-2.5 w-2.5 rounded-full bg-[#675F57]"></span>
+    <span class="mt-2 block h-2 w-2 rounded-full bg-[#675F57]"></span>
     <span>Review profiles and video interviews of candidates</span>
   </li>
 
   <li class="flex items-start gap-8">
-    <span class="mt-2 block h-2.5 w-2.5 rounded-full bg-[#675F57]"></span>
+    <span class="mt-2 block h-2 w-2 rounded-full bg-[#675F57]"></span>
     <span>Conduct Video Interview of selected candidates</span>
   </li>
 
   <li class="flex items-start gap-8">
-    <span class="mt-2 block h-2.5 w-2.5 rounded-full bg-[#675F57]"></span>
+    <span class="mt-2 block h-2 w-2 rounded-full bg-[#675F57]"></span>
     <span>Create profile showcasing your opportunity</span>
   </li>
 </ul>
